# package-comparison-module

./: README.md  pyproject.toml
src/: altlinux_api.py  cli.py  comparison.py  config.py  logging_config.py  models.py  utils.py
tests/: test_altlinux_api.py  test_cli.py  test_comparison.py  test_utils.py
