[tool.poetry]
name = "package-comparison-module"
version = "0.1.0"
description = ""
authors = ["igorkonov <igorkonov1993@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.2"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
packaging = "^24.1"
click = "^8.1.7"
loguru = "^0.7.2"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
compare-packages = "src.cli:main"